--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "element-plus": "^2.3.7",
+    "eventsource-parser": "^1.0.0",
+    "expiry-map": "^2.0.0",
     "pinia": "^2.0.14",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-import-css": "^3.0.3",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "webextension-polyfill": "^0.7.0",
     "webextension-polyfill-ts": "^0.22.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
