--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "element-plus": "^2.3.7",
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
+    "marked": "^5.1.1",
     "pinia": "^2.0.14",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-import-css": "^3.0.3",
+    "sass": "^1.63.6",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "webextension-polyfill": "^0.7.0",
