--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
     "marked": "^5.1.1",
+    "ofetch": "^1.1.1",
     "pinia": "^2.0.14",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -33,9 +34,11 @@
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.11.10",
     "@vitejs/plugin-vue": "^1.9.3",
+    "autoprefixer": "^10.4.14",
     "esno": "^0.12.1",
     "fs-extra": "^10.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.27",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
     "rollup-plugin-chrome-extension": "^3.5.3",
@@ -45,6 +48,7 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-zip": "^1.0.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.5",
     "unplugin-vue-components": "^0.25.1"
