--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "element-plus": "^2.3.7",
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
+    "highlight.js": "^11.8.0",
     "marked": "^5.1.1",
+    "marked-highlight": "^2.0.1",
     "ofetch": "^1.1.1",
     "pinia": "^2.0.14",
     "rollup-plugin-alias": "^2.2.0",
