--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cword-grammar-correction-extension",
+  "name": "cword-extension",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
