--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "build": "env-cmd -f .env.production rollup -c",
+    "dev": "env-cmd -f .env.development rollup -c -w"
   },
   "dependencies": {
+    "crypto-es": "^2.0.4",
     "dotenv": "^16.0.0",
     "element-plus": "^2.3.7",
+    "env-cmd": "^10.1.0",
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
     "highlight.js": "^11.8.0",
+    "jssha": "^3.3.0",
     "marked": "^5.1.1",
     "marked-highlight": "^2.0.1",
     "ofetch": "^1.1.1",
@@ -47,6 +50,7 @@
     "rollup-plugin-empty-dir": "^1.0.4",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.0",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-zip": "^1.0.1",
