Add options page

--- a/tools/config.json
+++ b/tools/config.json
@@ -28,7 +28,7 @@
   },
   {
     "id": "4e93d17b-5646-4d65-afc1-d26dbcfd979e",
-    "description": "Summary",
+    "description": "Dictionary",
     "READONLY": {
       "label": "Dictionary",
       "description": "",
