--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "cremind-extension",
   "version": "1.0.2",
+  "author": "Lee Nguyen",
+  "description": "",
   "type": "module",
+  "license": "MIT",
+  "keywords": [
+    "chrome-extension",
+    "vue",
+    "vite",
+    "create-chrome-ext"
+  ],
+  "engines": {
+    "node": ">=14.18.0"
+  },
   "scripts": {
-    "build": "env-cmd -f .env.production rollup -c",
-    "dev": "env-cmd -f .env.development rollup -c -w"
+    "dev": "vite --mode development",
+    "build": "vue-tsc --noEmit && vite build --mode production",
+    "preview": "vite preview",
+    "fmt": "prettier --write '**/*.{vue,ts,json,css,scss,md}'"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "element-plus": "^2.3.7",
+    "element-plus": "^2.3.9",
     "env-cmd": "^10.1.0",
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
@@ -17,38 +30,20 @@
     "marked-highlight": "^2.0.1",
     "ofetch": "^1.1.1",
     "pinia": "^2.1.6",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-import-css": "^3.0.3",
-    "sass": "^1.63.6",
-    "vue": "^3.3.4"
+    "sass": "^1.65.1",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^1.0.12",
     "@iconify/vue": "^4.1.1",
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@types/chrome": "0.0.243",
-    "@types/fs-extra": "^11.0.1",
+    "@types/chrome": "^0.0.236",
+    "@types/marked": "^5.0.1",
     "@types/node": "^20.4.10",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.14",
-    "esno": "^0.17.0",
-    "fs-extra": "^11.1.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.1",
-    "rollup": "^2.38.5",
-    "rollup-plugin-chrome-extension": "^3.5.3",
-    "rollup-plugin-empty-dir": "^1.0.4",
-    "rollup-plugin-inject-process-env": "^1.3.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.0",
-    "rollup-plugin-vue": "^6.0.0",
-    "rollup-plugin-zip": "^1.0.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "@vitejs/plugin-vue": "^2.3.3",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13",
+    "vite-plugin-zip-pack": "^1.0.5",
+    "vue-tsc": "^0.38.2"
   }
 }
