--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cremind-extension",
-  "version": "1.0.3",
+  "version": "2.0.1",
   "author": "Lee Nguyen",
   "description": "",
   "type": "module",
@@ -15,7 +15,8 @@
     "node": ">=14.18.0"
   },
   "scripts": {
-    "dev": "vite --mode development",
+    "dev": "vite --mode internal",
+    "build:dev": "vue-tsc --noEmit && vite build --mode development",
     "build": "vue-tsc --noEmit && vite build --mode production",
     "preview": "vite preview",
     "fmt": "prettier --write '**/*.{vue,ts,json,css,scss,md}'"
