--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cremind-extension",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "author": "Lee Nguyen",
   "description": "",
   "type": "module",
@@ -27,9 +27,10 @@
     "eventsource-parser": "^1.0.0",
     "expiry-map": "^2.0.0",
     "highlight.js": "^11.8.0",
+    "lodash-es": "^4.17.21",
     "marked": "^5.1.1",
     "marked-highlight": "^2.0.1",
-    "ofetch": "^1.1.1",
+    "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
     "sass": "^1.65.1",
     "vue": "^3.2.37"
@@ -45,6 +46,7 @@
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
     "vite-plugin-zip-pack": "^1.0.5",
+    "vue-router": "^4.2.4",
     "vue-tsc": "^0.38.2"
   }
 }
