--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cremind-extension",
-  "version": "2.6.1",
+  "version": "2.7.0",
   "author": "Lee Nguyen",
   "description": "",
   "type": "module",
@@ -22,6 +22,7 @@
     "fmt": "prettier --write '**/*.{vue,ts,json,css,scss,md}'"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "element-plus": "^2.3.9",
     "env-cmd": "^10.1.0",
     "eventsource-parser": "^1.0.0",
@@ -41,12 +42,16 @@
     "@types/chrome": "^0.0.258",
     "@types/marked": "^5.0.1",
     "@types/node": "^20.4.10",
+    "@types/webextension-polyfill": "^0.12.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "js-sha3": "^0.9.3",
     "prettier": "^2.7.1",
+    "random-int": "^3.0.0",
     "typescript": "^5.3.3",
     "vite": "^2.9.13",
     "vite-plugin-zip-pack": "^1.0.5",
     "vue-router": "^4.2.4",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "webextension-polyfill": "^0.12.0"
   }
 }
